# animatic-editor

./: .gitignore  README.md  package-lock.json  package.json
docs/: clip_timeline_management.md  image_insertion_plan.md  implementation_spec.md  mvp_plan.md  recommended_project_structure.md  remote_assets.md  ripple_insert.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  media.rs  mod.rs  project.rs  system.rs
src-tauri/src/models/: media.rs
src-tauri/src/services/: capability.rs  downloader.rs  ffmpeg.rs  ffprobe.rs  mod.rs  path_resolver.rs  project_io.rs
src/components/assets/: AssetBin.tsx  AssetStatusBadge.tsx
src/components/inspector/: InspectorPanel.tsx
src/components/layout/: AppShell.tsx  BottomPanel.tsx  LeftPanel.tsx  RightPanel.tsx  Toolbar.tsx
src/components/monitor/: ProgramMonitor.tsx
src/components/timeline/: Playhead.tsx  TimelineClip.tsx  TimelineRuler.tsx  TimelineTrackRow.tsx  TimelineTracks.tsx  TimelineView.tsx
src/components/transport/: TransportBar.tsx
src/features/export/: exportActions.ts
src/features/importer/: assetFetcher.ts  fountainParser.ts  importFountain.ts
src/features/playback/: usePlaybackEngine.ts
src/features/project/: projectActions.ts
src/lib/: ids.ts  projectDefaults.ts  time.ts  timelineMath.ts  timelineSelectors.ts
src/store/: useAppStore.ts
src/store/slices/: exportSlice.ts  playbackSlice.ts  projectSlice.ts  selectionSlice.ts  timelineSlice.ts
src/types/: export.ts  import.ts  media.ts  project.ts  timeline.ts
