[package]
name = "animatic-editor"
version = "0.1.0"
description = "Animatic Editor"
authors = ["you"]
edition = "2021"

[lib]
name = "animatic_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "stream", "json"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
which = "6"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

